# fastlog

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
benches/: filelog.rs  logging_benchmark.rs
examples/: filelog.rs  minimal.rs  owned_format.rs  speedtest.rs
src/: lib.rs
tests/: flush.rs  owned_format_test.rs
